--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "gym-system",
   "version": "1.0.0",
   "description": "",
-  "main": "main/main.js",
+  "main": "dist-electron/main.js",
   "scripts": {
-    "dev": "vite",
-    "dev:electron": "concurrently -k \"npm run dev\" \"wait-on tcp:3000 && npm start\"",
+    "dev:vite": "vite",
+    "dev:backend": "wait-on tcp:3000 && tsup --watch --onSuccess \"powershell -Command \\\"Copy-Item -Path 'main/database/migrations' -Destination 'dist-electron' -Recurse -Force\\\" && electron .\"",
+    "dev:electron": "concurrently -k \"npm run dev:vite\" \"npm run dev:backend\"",
     "start": "electron .",
-    "build": "vite build",
+    "build:main": "tsup",
+    "build:renderer": "vite build",
+    "build": "npm run build:main && npm run build:renderer && powershell -Command \"Copy-Item -Path 'main/database/migrations' -Destination 'dist-electron/migrations' -Recurse -Force\"",
     "rebuild": "electron-rebuild"
   },
   "keywords": [],
@@ -17,11 +20,22 @@
   "devDependencies": {
     "@electron/rebuild": "^4.0.2",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/electron": "^1.4.38",
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^5.1.2",
     "concurrently": "^9.2.1",
     "electron": "^40.0.0",
     "tailwindcss": "^4.1.18",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
+    "vite-plugin-electron": "^0.29.0",
+    "vite-plugin-electron-renderer": "^0.14.6",
     "wait-on": "^9.0.3"
   },
   "dependencies": {
